k8s/services-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: polyglot-shop
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: polyglot-shop
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
