k8s/user-auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-auth
  namespace: polyglot-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-auth
  template:
    metadata:
      labels:
        app: user-auth
    spec:
      containers:
        - name: user-auth
          image: kumudhranasinghe/user-auth:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: user-auth
  namespace: polyglot-shop
spec:
  selector:
    app: user-auth
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
